--- a/web/package.json
+++ b/web/package.json
@@ -4,9 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "codegen": "graphql-codegen --config codegen.yml --verbose --debug"
   },
   "dependencies": {
@@ -25,7 +26,16 @@
     "react-hook-form": "^7.35.0",
     "react-router-dom": "^6.3.0",
     "urql": "^3.0.1",
-    "zod": "^3.19.0"
+    "zod": "^3.19.0",
+    "@types/node": "18.14.1",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.1",
+    "next": "13.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "4.9.5"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "3.2.1",
