--- a/web/package.json
+++ b/web/package.json
@@ -1,8 +1,7 @@
 {
   "name": "web",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,22 +10,6 @@
     "codegen": "graphql-codegen --config codegen.yml --verbose --debug"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@hookform/resolvers": "^2.9.7",
-    "@mui/icons-material": "^5.10.3",
-    "@mui/material": "^5.10.4",
-    "codeflasknextjs": "^1.0.5",
-    "format-graphql": "^1.4.0",
-    "graphql": "^16.6.0",
-    "graphql-request": "^5.0.0",
-    "prettier": "^2.8.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.35.0",
-    "react-router-dom": "^6.3.0",
-    "urql": "^3.0.1",
-    "zod": "^3.19.0",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -42,12 +25,6 @@
     "@graphql-codegen/introspection": "3.0.1",
     "@graphql-codegen/typescript": "3.0.1",
     "@graphql-codegen/typescript-operations": "3.0.1",
-    "@graphql-codegen/typescript-urql": "^3.6.4",
-    "@serverless-stack/static-site-env": "^1.9.1",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.1",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.7"
+    "@graphql-codegen/typescript-urql": "^3.6.4"
   }
 }
