--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "@graphql-codegen/introspection": "3.0.1",
     "@graphql-codegen/typescript": "3.0.1",
     "@graphql-codegen/typescript-operations": "3.0.1",
-    "@graphql-codegen/typescript-urql": "^3.6.4"
+    "@graphql-codegen/typescript-urql": "^3.6.4",
+    "graphql": "^16.6.0"
   }
 }
