--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "@graphql-codegen/typescript": "3.0.1",
     "@graphql-codegen/typescript-operations": "3.0.1",
     "@graphql-codegen/typescript-urql": "^3.6.4",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "prettier": "^2.8.4"
   }
 }
