--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.devservices.port=5432
+quarkus.flyway.clean-at-start=true
 quarkus.flyway.migrate-at-start=true
 quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:3000
