--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,8 @@
     "codegen": "graphql-codegen --config codegen.yml --verbose --debug"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "@types/node": "18.14.1",
