--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "openapi-generate": "openapi --input ./generated/schema.yaml --output ./generated/ts"
+    "openapi-generate": "npx openapi-codegen gen myApi"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -23,9 +23,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
+    "react-query": "^3.39.3",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@openapi-codegen/cli": "^2.0.0",
+    "@openapi-codegen/typescript": "^6.1.1",
     "openapi-typescript-codegen": "^0.23.0",
     "prettier": "^2.8.4"
   }
