--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,8 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@openapi-codegen/cli": "^2.0.0",
+    "@openapi-codegen/typescript": "^6.1.1",
     "@tanstack/react-query": "^4.24.10"
   }
 }
