--- a/web/package.json
+++ b/web/package.json
@@ -6,29 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "openapi-generate": "npx openapi-codegen gen myApi"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@faker-js/faker": "^7.6.0",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
+    "@tanstack/react-query": "^4.24.10",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
+    "msw": "^1.1.0",
     "next": "13.2.1",
+    "orval": "^6.12.0",
+    "rapini": "^2.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
-    "react-query": "^3.39.3",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "@openapi-codegen/cli": "^2.0.0",
-    "@openapi-codegen/typescript": "^6.1.1",
-    "@tanstack/react-query": "^4.24.10"
+    "@openapi-codegen/typescript": "^6.1.1"
   }
 }
