--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 quarkus.datasource.db-kind=postgresql
+quarkus.hibernate-orm.log.sql=true
 quarkus.datasource.devservices.port=5432
 quarkus.flyway.clean-at-start=true
 quarkus.flyway.migrate-at-start=true
 quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:3000
-quarkus.smallrye-graphql.validation.enabled=true
-quarkus.smallrye-graphql.error-extension-fields=exception,classification,code,description,validationErrorType,queryPath
-quarkus.smallrye-graphql.schema-include-scalars=true
-quarkus.smallrye-graphql.schema-include-schema-definition=true
-quarkus.smallrye-graphql.schema-include-introspection-types=true
-quarkus.smallrye-graphql.log-payload=queryOnly
+#quarkus.smallrye-graphql.validation.enabled=true
+#quarkus.smallrye-graphql.error-extension-fields=exception,classification,code,description,validationErrorType,queryPath
+#quarkus.smallrye-graphql.schema-include-scalars=true
+#quarkus.smallrye-graphql.schema-include-schema-definition=true
+#quarkus.smallrye-graphql.schema-include-introspection-types=true
+#quarkus.smallrye-graphql.log-payload=queryOnly
