--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ quarkus.datasource.devservices.port=5432
 quarkus.flyway.clean-at-start=true
 quarkus.flyway.migrate-at-start=true
 quarkus.http.cors=true
-quarkus.http.cors.origins=http://localhost:3000
+quarkus.http.cors.origins=*
 #quarkus.smallrye-graphql.validation.enabled=true
 #quarkus.smallrye-graphql.error-extension-fields=exception,classification,code,description,validationErrorType,queryPath
 #quarkus.smallrye-graphql.schema-include-scalars=true
