--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-api": "node node_modules/orval/dist/bin/orval.js"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -23,7 +24,6 @@
     "eslint-config-next": "13.2.1",
     "msw": "^1.1.0",
     "next": "13.2.1",
-    "orval": "^6.12.0",
     "rapini": "^2.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@openapi-codegen/cli": "^2.0.0",
-    "@openapi-codegen/typescript": "^6.1.1"
+    "@openapi-codegen/typescript": "^6.1.1",
+    "orval": "^6.12.0"
   }
 }
