--- a/vite/package.json
+++ b/vite/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-api": "node node_modules/orval/dist/bin/orval.js"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -17,6 +18,9 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "@openapi-codegen/cli": "^2.0.0",
+    "@openapi-codegen/typescript": "^6.1.1",
+    "orval": "^6.12.0"
   }
 }
