--- a/vite/package.json
+++ b/vite/package.json
@@ -10,6 +10,11 @@
     "generate-api": "node node_modules/orval/dist/bin/orval.js"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.10",
+    "react-hook-form": "^7.43.2",
+    "@tanstack/react-query": "^4.24.10",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
