--- a/vite/tsconfig.node.json
+++ b/vite/tsconfig.node.json
@@ -5,8 +5,5 @@
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts"],
-  "paths": {
-    "@/*": ["./src/*"]
-  }
+  "include": ["vite.config.ts"]
 }
