--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 quarkus.datasource.db-kind=postgresql
-quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.log.sql=false
 quarkus.datasource.devservices.port=5432
 quarkus.flyway.clean-at-start=true
 quarkus.flyway.migrate-at-start=true
