--- a/vite/package.json
+++ b/vite/package.json
@@ -14,20 +14,21 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
-    "react-hook-form": "^7.43.2",
     "@tanstack/react-query": "^4.24.10",
     "axios": "^1.3.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.2",
+    "recharts": "^2.6.2"
   },
   "devDependencies": {
+    "@openapi-codegen/cli": "^2.0.0",
+    "@openapi-codegen/typescript": "^6.1.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "orval": "^6.12.0",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0",
-    "@openapi-codegen/cli": "^2.0.0",
-    "@openapi-codegen/typescript": "^6.1.1",
-    "orval": "^6.12.0"
+    "vite": "^4.2.0"
   }
 }
