--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ quarkus.flyway.clean-at-start=true
 quarkus.flyway.migrate-at-start=true
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
+
+quarkus.smallrye-graphql.schema-include-scalars=true
