--- a/vite/package.json
+++ b/vite/package.json
@@ -15,8 +15,12 @@
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
+    "@tanstack/react-query": "^4.24.10",
+    "@tanstack/react-query-devtools": "^4.29.7",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.2",
     "recharts": "^2.6.2",
     "simplebar-react": "^3.2.4",
     "urql": "^4.0.5"
