--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
       <artifactId>quarkus-arc</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.quarkiverse.mybatis</groupId>
+      <artifactId>quarkus-mybatis</artifactId>
+      <version>2.1.0</version>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
