--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,10 @@
   <dependencies>
     <dependency>
       <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-hibernate-orm-panache</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
       <artifactId>quarkus-flyway</artifactId>
     </dependency>
     <dependency>
@@ -42,11 +46,6 @@
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-arc</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkiverse.mybatis</groupId>
-      <artifactId>quarkus-mybatis</artifactId>
-      <version>2.1.0</version>
     </dependency>
     <dependency>
       <groupId>org.buildobjects</groupId>
