Query mapper + GraphQL.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ quarkus.http.cors=true
 quarkus.http.cors.origins=*
 
 quarkus.smallrye-graphql.schema-include-scalars=true
+quarkus.jooq.dialect=postgresql
