--- a/pom.xml
+++ b/pom.xml
@@ -53,10 +53,21 @@
       <version>2.8.2</version>
     </dependency>
     <dependency>
+      <groupId>io.quarkiverse.jooq</groupId>
+      <artifactId>quarkus-jooq</artifactId>
+      <version>2.0.0</version>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jooq</groupId>
+      <artifactId>jooq-codegen-maven</artifactId>
+      <version>3.18.6</version>
+    </dependency>
+
   </dependencies>
   <build>
     <plugins>
@@ -84,6 +95,9 @@
           </compilerArgs>
         </configuration>
       </plugin>
+
+
+
     </plugins>
   </build>
   <profiles>
