--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ quarkus.http.cors.origins=*
 
 quarkus.smallrye-graphql.schema-include-scalars=true
 quarkus.jooq.dialect=postgresql
+
+quarkus.log.level=INFO
+quarkus.log.category."org.jooq.tools.LoggerListener".level=INFO
