--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.devservices.port=5432
-quarkus.flyway.clean-at-start=true
-quarkus.flyway.migrate-at-start=true
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
 
 quarkus.smallrye-graphql.schema-include-scalars=true
-quarkus.jooq.dialect=postgresql
 
-quarkus.log.level=INFO
-quarkus.log.category."org.jooq.tools.LoggerListener".level=INFO
+quarkus.hibernate-orm.database.generation=none
+quarkus.hibernate-orm.sql-load-script=no-file
+quarkus.flyway.baseline-on-migrate=true
+quarkus.flyway.clean-at-start=true
+quarkus.flyway.migrate-at-start=true
