--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,9 @@ quarkus.http.cors.origins=*
 
 quarkus.smallrye-graphql.schema-include-scalars=true
 
-quarkus.hibernate-orm.database.generation=none
-quarkus.hibernate-orm.sql-load-script=no-file
+%dev.quarkus.hibernate-orm.database.generation=drop-and-create
+%prod.quarkus.hibernate-orm.database.generation=none
+%prod.quarkus.hibernate-orm.sql-load-script=no-file
 quarkus.flyway.baseline-on-migrate=true
 quarkus.flyway.clean-at-start=true
 quarkus.flyway.migrate-at-start=true
