--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ quarkus.smallrye-graphql.schema-include-scalars=true
 quarkus.flyway.baseline-on-migrate=true
 quarkus.flyway.clean-at-start=true
 quarkus.flyway.migrate-at-start=true
+
+
+quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.log.format-sql=false
+quarkus.hibernate-orm.log.jdbc-warnings=true
