--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ quarkus.flyway.migrate-at-start=true
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.log.format-sql=false
 quarkus.hibernate-orm.log.jdbc-warnings=true
+
+quarkus.smallrye-graphql.error-extension-fields=exception,classification,code,description,validationErrorType,queryPath
