--- a/vite/package.json
+++ b/vite/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.15",
+    "@mui/icons-material": "^5.14.15",
     "@mui/joy": "^5.0.0-beta.12",
+    "@mui/material": "^5.14.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "urql": "^4.0.5"
