--- a/vite/package.json
+++ b/vite/package.json
@@ -13,12 +13,15 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.15",
+    "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.15",
     "@mui/joy": "^5.0.0-beta.12",
     "@mui/material": "^5.14.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "urql": "^4.0.5"
+    "react-hook-form": "^7.47.0",
+    "urql": "^4.0.5",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
