--- a/vite/package.json
+++ b/vite/package.json
@@ -10,18 +10,19 @@
     "codegen": "DEBUG=true NODE_NO_WARNINGS=1 graphql-code-generator --debug -v --config ./codegen.ts"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/inter": "^5.0.15",
-    "@hookform/resolvers": "^3.3.2",
-    "@mui/icons-material": "^5.14.15",
-    "@mui/joy": "^5.0.0-beta.12",
-    "@mui/material": "^5.14.15",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.47.0",
-    "urql": "^4.0.5",
-    "yup": "^1.3.2"
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/inter": "^5.0.18",
+    "@hookform/resolvers": "^3.4.2",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/joy": "^5.0.0-beta.36",
+    "@mui/material": "^5.15.18",
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
+    "urql": "^4.1.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
@@ -32,11 +33,16 @@
     "@graphql-codegen/typescript-urql": "^3.7.3",
     "@openapi-codegen/cli": "^2.0.0",
     "@openapi-codegen/typescript": "^6.1.1",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "prettier": "^3.0.1",
-    "typescript": "^4.9.3",
-    "vite": "^4.4.9"
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "prettier": "^3.2.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
   }
 }
