--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ quarkus.hibernate-orm.log.format-sql=false
 quarkus.hibernate-orm.log.jdbc-warnings=true
 
 quarkus.smallrye-graphql.error-extension-fields=exception,classification,code,description,validationErrorType,queryPath
+
+
+mp.graphql.showErrorMessage=com.sstec.qgql.mapper.LeadCreationException
+smallrye.graphql.errorExtensionFields=message
+#smallrye.graphql.errorExtensionFields=exception,classification,code,description,validationErrorType,queryPath
