--- a/vite/package.json
+++ b/vite/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.15.18",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "react": "^18.3.1",
+    "react-aria-components": "^1.2.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "urql": "^4.1.0",
