--- a/vite/package.json
+++ b/vite/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
+    "react-router-dom": "^6.23.1",
     "urql": "^4.1.0",
     "yup": "^1.4.0"
   },
