--- a/vite/package.json
+++ b/vite/package.json
@@ -10,20 +10,39 @@
     "codegen": "DEBUG=true NODE_NO_WARNINGS=1 graphql-code-generator --debug -v --config ./codegen.ts"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
     "@fontsource/inter": "^5.0.18",
     "@hookform/resolvers": "^3.4.2",
-    "@mui/icons-material": "^5.15.18",
-    "@mui/joy": "^5.0.0-beta.36",
-    "@mui/material": "^5.15.18",
+    "@radix-ui/react-accordion": "1.2.0",
+    "@radix-ui/react-alert-dialog": "1.0.5",
+    "@radix-ui/react-checkbox": "1.1.0",
+    "@radix-ui/react-collapsible": "1.1.0",
+    "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-dropdown-menu": "2.0.6",
+    "@radix-ui/react-hover-card": "1.0.7",
+    "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-popover": "1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "1.1.3",
+    "@radix-ui/react-select": "2.0.0",
+    "@radix-ui/react-separator": "1.0.3",
+    "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-switch": "1.0.3",
+    "@radix-ui/react-toast": "1.1.5",
+    "@radix-ui/react-tooltip": "1.0.7",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "class-variance-authority": "^0.7.0",
+    "load-script": "^2.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.51.5",
-    "react-router-dom": "^6.23.1",
+    "tailwind-merge": "^2.4.0",
     "urql": "^4.1.0",
     "yup": "^1.4.0"
+  },
+  "resolutions": {
+    "@radix-ui/react-dismissable-layer": "^1.0.5",
+    "@radix-ui/react-focus-scope": "^1.0.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
