--- a/vite/package.json
+++ b/vite/package.json
@@ -30,6 +30,9 @@
     "@radix-ui/react-toast": "1.1.5",
     "@radix-ui/react-tooltip": "1.0.7",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "tailwindcss": "3.4.4",
+    "tailwindcss-animate": "1.0.7",
+    "@tailwindcss/typography": "^0.5.13",
     "class-variance-authority": "^0.7.0",
     "load-script": "^2.0.0",
     "lodash": "^4.17.21",
