--- a/vite/package.json
+++ b/vite/package.json
@@ -29,10 +29,8 @@
     "@radix-ui/react-switch": "1.0.3",
     "@radix-ui/react-toast": "1.1.5",
     "@radix-ui/react-tooltip": "1.0.7",
-    "@vitejs/plugin-react-swc": "^3.7.0",
-    "tailwindcss": "3.4.4",
-    "tailwindcss-animate": "1.0.7",
     "@tailwindcss/typography": "^0.5.13",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "class-variance-authority": "^0.7.0",
     "load-script": "^2.0.0",
     "lodash": "^4.17.21",
@@ -40,6 +38,8 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.51.5",
     "tailwind-merge": "^2.4.0",
+    "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "1.0.7",
     "urql": "^4.1.0",
     "yup": "^1.4.0"
   },
@@ -61,9 +61,11 @@
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.39",
     "prettier": "^3.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
