--- a/vite/package.json
+++ b/vite/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-switch": "1.0.3",
     "@radix-ui/react-toast": "1.1.5",
     "@radix-ui/react-tooltip": "1.0.7",
+    "@styled-icons/boxicons-regular": "^10.47.0",
     "@tailwindcss/typography": "^0.5.13",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "class-variance-authority": "^0.7.0",
@@ -37,6 +38,8 @@
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.51.5",
+    "styled-components": "^6.1.11",
+    "styled-system": "^5.1.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "1.0.7",
@@ -58,6 +61,7 @@
     "@openapi-codegen/typescript": "^6.1.1",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/styled-system": "^5.1.22",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
     "@vitejs/plugin-react": "^4.2.1",
