--- a/vite/package.json
+++ b/vite/package.json
@@ -30,14 +30,23 @@
     "@radix-ui/react-toast": "1.1.5",
     "@radix-ui/react-tooltip": "1.0.7",
     "@styled-icons/boxicons-regular": "^10.47.0",
+    "@styled-system/css": "5.1.5",
+    "@styled-system/prop-types": "5.1.5",
+    "@styled-system/theme-get": "5.1.2",
     "@tailwindcss/typography": "^0.5.13",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "class-variance-authority": "^0.7.0",
     "load-script": "^2.0.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.403.0",
+    "next": "^14.2.4",
+    "polished": "^4.3.1",
+    "prop-types": "15.8.1",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.51.5",
+    "react-intl": "^6.6.8",
+    "react-scrollchor": "^7.0.2",
     "styled-components": "^6.1.11",
     "styled-system": "^5.1.5",
     "tailwind-merge": "^2.4.0",
@@ -59,6 +68,7 @@
     "@graphql-codegen/typescript-urql": "^3.7.3",
     "@openapi-codegen/cli": "^2.0.0",
     "@openapi-codegen/typescript": "^6.1.1",
+    "@types/lodash": "^4.17.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/styled-system": "^5.1.22",
