--- a/mantine/codegen.yml
+++ b/mantine/codegen.yml
@@ -2,8 +2,8 @@ overwrite: true
 schema: 'http://127.0.0.1:8080/graphql/schema.graphql'
 documents: ['./**/*.tsx']
 generates:
-  './src/gql/api.ts':
+  './gql/api.ts':
      plugins: ['typescript', 'typescript-operations']
-#  hooks
-#     afterOneFileWrite: ['prettier --write']
+hooks:
+   afterOneFileWrite: ['prettier --write']
 
