--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@mantine/core": "7.11.1",
+    "@mantine/form": "^7.11.1",
     "@mantine/hooks": "7.11.1",
     "@mantinex/mantine-logo": "^1.0.1",
     "@next/bundle-analyzer": "^14.2.4",
@@ -32,7 +33,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/client-preset": "^4.1.0",
+    "@graphql-codegen/introspection": "^4.0.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@graphql-codegen/typescript-urql": "^3.7.3",
     "@next/eslint-plugin-next": "^14.2.4",
+    "@openapi-codegen/cli": "^2.0.0",
+    "@openapi-codegen/typescript": "^6.1.1",
     "@storybook/addon-essentials": "^8.1.10",
     "@storybook/addon-styling-webpack": "^1.0.0",
     "@storybook/blocks": "^8.1.10",
@@ -45,6 +54,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.8",
     "@types/react": "18.3.3",
+    "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "babel-loader": "^9.1.3",
@@ -57,6 +67,7 @@
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-testing-library": "^6.2.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -69,17 +80,7 @@
     "stylelint": "^16.6.1",
     "stylelint-config-standard-scss": "^13.1.0",
     "ts-jest": "^29.1.5",
-    "typescript": "5.5.2",
-    "@graphql-codegen/cli": "^5.0.0",
-    "@graphql-codegen/client-preset": "^4.1.0",
-    "@graphql-codegen/introspection": "^4.0.0",
-    "@graphql-codegen/typescript": "^4.0.1",
-    "@graphql-codegen/typescript-operations": "^4.0.1",
-    "@graphql-codegen/typescript-urql": "^3.7.3",
-    "@openapi-codegen/cli": "^2.0.0",
-    "@openapi-codegen/typescript": "^6.1.1",
-    "@types/react-dom": "^18.2.22",
-    "eslint-plugin-react-refresh": "^0.4.6"
+    "typescript": "5.5.2"
   },
   "packageManager": "yarn@4.3.1"
 }
