--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "@mantinex/mantine-logo": "^1.0.1",
     "@next/bundle-analyzer": "^14.2.4",
     "@tabler/icons-react": "^3.6.0",
+    "keycloak-js": "^25.0.1",
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
