--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "@tabler/icons-react": "^3.6.0",
     "keycloak-js": "^25.0.1",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "urql": "^4.1.0"
