--- a/web/package.json
+++ b/web/package.json
@@ -28,9 +28,10 @@
     "@tabler/icons-react": "^3.6.0",
     "keycloak-js": "^25.0.1",
     "next": "14.2.4",
-    "next-auth": "^4.24.7",
+    "oidc-client-ts": "^3.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-oidc-context": "^3.1.0",
     "urql": "^4.1.0"
   },
   "devDependencies": {
