--- a/vite/package.json
+++ b/vite/package.json
@@ -21,8 +21,8 @@
   },
   "dependencies": {
     "@mantine/core": "7.11.1",
-    "@mantine/hooks": "7.11.1",
     "@mantine/form": "^7.11.1",
+    "@mantine/hooks": "7.11.1",
     "@mantinex/mantine-logo": "^1.0.1",
     "@tabler/icons-react": "^3.10.0",
     "oidc-client-ts": "^3.0.1",
@@ -33,6 +33,7 @@
     "urql": "^4.1.0"
   },
   "devDependencies": {
+    "graphql": "^16.9.0",
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/client-preset": "^4.1.0",
     "@graphql-codegen/introspection": "^4.0.0",
