--- a/vite/tsconfig.json
+++ b/vite/tsconfig.json
@@ -18,7 +18,8 @@
     "jsx": "react-jsx",
     "paths": {
       "@/*": ["./src/*"],
-      "@test-utils": ["./test-utils"]
+      "@test-utils": ["./test-utils"],
+      "@gql/*": ["./gql/*"]
     }
   },
   "include": ["src", "test-utils"]
