--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ quarkus.smallrye-graphql.error-extension-fields=exception,classification,code,de
 mp.graphql.showErrorMessage=com.sstec.qgql.mapper.LeadCreationException
 smallrye.graphql.errorExtensionFields=message
 #smallrye.graphql.errorExtensionFields=exception,classification,code,description,validationErrorType,queryPath
+
+quarkus.keycloak.devservices.port=9999
+quarkus.keycloak.devservices.realm-path=quarkus-realm.json
