--- a/vite/package.json
+++ b/vite/package.json
@@ -25,6 +25,7 @@
     "@mantine/hooks": "7.11.1",
     "@mantinex/mantine-logo": "^1.0.1",
     "@tabler/icons-react": "^3.10.0",
+    "@urql/exchange-auth": "^2.2.0",
     "oidc-client-ts": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -33,7 +34,6 @@
     "urql": "^4.1.0"
   },
   "devDependencies": {
-    "graphql": "^16.9.0",
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/client-preset": "^4.1.0",
     "@graphql-codegen/introspection": "^4.0.0",
@@ -64,6 +64,7 @@
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "graphql": "^16.9.0",
     "identity-obj-proxy": "^3.0.0",
     "jsdom": "^24.1.0",
     "postcss": "^8.4.38",
