--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,5 +25,4 @@ smallrye.graphql.errorExtensionFields=message
 #smallrye.graphql.errorExtensionFields=exception,classification,code,description,validationErrorType,queryPath
 
 quarkus.keycloak.devservices.port=9999
-#export from ui is not ok for server migrations, use command line, existing file is from ui and
-#quarkus.keycloak.devservices.realm-path=realm-export.json
+quarkus.keycloak.devservices.realm-path=quarkus-realm.json
