--- a/vite/package.json
+++ b/vite/package.json
@@ -26,6 +26,7 @@
     "@mantinex/mantine-logo": "^1.0.1",
     "@tabler/icons-react": "^3.10.0",
     "@urql/exchange-auth": "^2.2.0",
+    "jotai": "^2.9.0",
     "oidc-client-ts": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
